# stock-data-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  README_EN.md  docker-compose.yml  pyproject.toml  server.json
.github/workflows/: docker.yaml  docker.yml  pypi.yaml  release.yaml
stock_data_mcp/: __init__.py  cache.py
stock_data_mcp/data_provider/: __init__.py  akshare_fetcher.py  alphavantage_fetcher.py  baostock_fetcher.py  base.py  efinance_fetcher.py  tushare_fetcher.py  types.py  yfinance_fetcher.py
